--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,29 +1,35 @@
 {
-    "RESUME_HOME": {
-      "PRESENTATION": {
-        "DEVELOPER": "_____ Desenvolvedor Fullstack",
-        "HELLO": "Olá, tudo bem ??",
-        "WELCOME_FIRST": "Bem vindo ao meu website",
-        "WELCOME_SECOND": "fique a vontade para me conhecer :D"
-      },
-      "ABOUT": {
-        "TRAJECTORY": {
-          "TITLE": "Minha trajetória",
-          "XP": "Experiência<br />3 anos",
-          "JOB": "Mid Software Engineer"
-        }
-      },
-      "STUDIES": {
-        "FIRST": "Meus estudos de programação começaram na Cotuca, uma escola técnica em Campinas, onde fiz um curso de 2 anos aprendendo Java, .NET, SQL, Python, e um pouco de Arduino, além de outras tecnologias.",
-        "SECOND": "Depois de terminar esses 2 anos, tentei alguns processos de estágio para entrar em diferentes empresas. Eventualmente entrei no CI&T como Estagiário, de 1200 participantes fui um dos 90 que entrou.",
-        "THIRD": "No meu primeiro ano como estagiário trabalhei em uma empresa de seguros de saude, cliente da CI&T, onde aprendi as melhores práticas de desenvolvimento de software, Spring Boot, Angular, Unit Testing, Component Testing, alguns termos e conhecimentos sobre o mercado em em geral.",
-        "FOURTH": "Atuei em um produto para agendamento de consultas de pacientes com médicos, através de um App, uma infraestrutura de microsserviços criada específica para este fluxo, e também uma plataforma web angular onde o auxiliar do médico poderia escolher o melhor horário para o paciente e para o médico.",
-        "FIFTH": "Após quase dois anos trabalhando na Sulamerica, mudei para um dos maiores bancos nacionais do Brasil, que também é cliente da CI&T, desde então venho trabalhando com LGPD e dados cadastrais em um produto para o banco."
-      },
-  
-      "SKILLS": {
-        "TITLE": "Minhas habilidades"
+  "RESUME_NAV": {
+    "HOME": "Home",
+    "ABOUT": "About",
+    "SERVICES": "Services",
+    "ABILITIES": "Abilities",
+    "CONTACT": "Contact"
+  },
+  "RESUME_HOME": {
+    "PRESENTATION": {
+      "DEVELOPER": "_____ Fullstack Developer",
+      "HELLO": "Hello, how are you ??",
+      "WELCOME_FIRST": "Welcome to my website",
+      "WELCOME_SECOND": "Feel free to know me :D"
+    },
+    "ABOUT": {
+      "TRAJECTORY": {
+        "TITLE": "My trajectory",
+        "XP": "Experience\n3 years",
+        "JOB": "Mid Software Engineer"
       }
+    },
+    "STUDIES": {
+      "FIRST": "My programming studies started at Cotuca, a technical school in Campinas, where I took a 2-year course learning Java, .NET, SQL, Python, and a little bit of Arduino, as well as other technologies.",
+      "SECOND": "After finishing these 2 years, I tried some internship processes to get into different companies. Eventually I joined CI&T as an Intern, out of 1200 participants I was one of the 90 who joined.",
+      "THIRD": "In my first year as an intern I worked at a health insurance company, a client of CI&T, where I learned the best practices in software development, Spring Boot, Angular, Unit Testing, Component Testing, some terms and knowledge about the market in general.",
+      "FOURTH": "I worked on a product for scheduling patient appointments with doctors, through an App, a microservices infrastructure created specifically for this flow, and also an angular web platform where the doctor's assistant could choose the best time for the patient and for the doctor.",
+      "FIFTH": "After almost two years working at Sulamerica, I moved to one of the largest national banks in Brazil, which is also a CI&T client, since then I have been working with LGPD and registration data in a product for the bank."
+    },
+
+    "SKILLS": {
+      "TITLE": "My abilities"
     }
   }
-  
+}
